[gd_scene load_steps=23 format=3 uid="uid://ctofwk1m4tnth"]

[ext_resource type="Texture2D" uid="uid://br38m4ygbys4n" path="res://Assets/bowl.png" id="1_1mnlr"]
[ext_resource type="Script" uid="uid://bo1p8aipfoxu1" path="res://Scripts/Nachos/nacho_plate.gd" id="1_k6ick"]
[ext_resource type="Texture2D" uid="uid://dd4p6yhgvu67s" path="res://Assets/backgroundcool.png" id="2_bkfci"]
[ext_resource type="Script" uid="uid://6bd6nq0p1r55" path="res://Scripts/Nachos/chipbag.gd" id="3_k6ick"]
[ext_resource type="Texture2D" uid="uid://dedwtqs7bnmch" path="res://Assets/bowlnew.png" id="3_pmkxe"]
[ext_resource type="Texture2D" uid="uid://b7456pdq6duvg" path="res://Assets/chips.png" id="4_gcdvv"]
[ext_resource type="Texture2D" uid="uid://cjnyjk5bhnu75" path="res://Assets/bowlchips.png" id="5_0f02q"]
[ext_resource type="Script" uid="uid://t4tp02hwr10n" path="res://Scripts/Nachos/cheese_bottle.gd" id="7_y75r0"]
[ext_resource type="Texture2D" uid="uid://c4tuhceyn8q3x" path="res://Assets/meatbowl.png" id="8_fo6km"]
[ext_resource type="Texture2D" uid="uid://sx3ytf5ybjl6" path="res://Assets/spoon.png" id="9_8dant"]
[ext_resource type="Texture2D" uid="uid://c34cgk38abepr" path="res://Assets/chipbagnew.png" id="9_iwwu1"]
[ext_resource type="Texture2D" uid="uid://ctqjhaamwv1c2" path="res://Assets/picobowlnew.png" id="9_ty3uo"]
[ext_resource type="Script" uid="uid://dqgkechryicjo" path="res://Scripts/Nachos/spoon.gd" id="10_wwtah"]
[ext_resource type="Texture2D" uid="uid://jix28sce1x8g" path="res://Assets/spoonmeat.png" id="11_8dant"]
[ext_resource type="Texture2D" uid="uid://dkkmeftowx4ct" path="res://Assets/cheese_bowl.png" id="11_p6had"]
[ext_resource type="Texture2D" uid="uid://l01wkar57085" path="res://Assets/meatbowlnew.png" id="13_p6had"]
[ext_resource type="Script" uid="uid://bc2ng8yu0nk28" path="res://Scripts/Nachos/pico_bowl.gd" id="13_yyxdo"]
[ext_resource type="PackedScene" uid="uid://gk1lglu6jxso" path="res://Scenes/timer.tscn" id="14_yyxdo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0q74f"]
size = Vector2(168, 33.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lonth"]
size = Vector2(58.5, 43)

[sub_resource type="LabelSettings" id="LabelSettings_yyxdo"]
font_size = 30

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fo6km"]
radius = 14.94
height = 60.4684

[node name="NachoPlate" type="Node2D"]
script = ExtResource("1_k6ick")
targetTJ = 25

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.351563)
texture = ExtResource("2_bkfci")
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 639.0
offset_bottom = 361.0
color = Color(0.568973, 0.568973, 0.568973, 1)

[node name="Bowl2" type="Sprite2D" parent="."]
position = Vector2(329, 225)
scale = Vector2(0.16, 0.16)
texture = ExtResource("3_pmkxe")

[node name="Bowl" type="Sprite2D" parent="."]
visible = false
position = Vector2(325, 271)
scale = Vector2(0.552632, 0.397368)
texture = ExtResource("1_1mnlr")

[node name="BowlArea" type="Area2D" parent="."]
position = Vector2(1, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BowlArea"]
position = Vector2(321, 280.75)
shape = SubResource("RectangleShape2D_0q74f")

[node name="ChipSprite" type="Area2D" parent="BowlArea"]
visible = false

[node name="Sprite2" type="Sprite2D" parent="BowlArea/ChipSprite"]
position = Vector2(328, 255)
scale = Vector2(0.16, 0.16)
texture = ExtResource("5_0f02q")

[node name="Sprite" type="Sprite2D" parent="BowlArea/ChipSprite"]
visible = false
position = Vector2(326, 274)
scale = Vector2(0.369444, 0.176389)
texture = ExtResource("4_gcdvv")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BowlArea/ChipSprite"]
visible = false
position = Vector2(326, 274)
scale = Vector2(0.369444, 0.176389)
polygon = PackedVector2Array(14, -180, -53.4, -180, -67.3, -176, -74.7, -176, -79.7, -172, -84.5, -172, -101.5, -162, -104.7, -162, -121.7, -148, -124.9, -148, -149.9, -120, -151.2, -120, -174.7, -76, -192.5, -76, -203.6, -70, -206.9, -70, -231.9, -42, -233.3, -42, -242, -22.9, -242, 33.9, -234.1, 47, -232, 69.2, -232, 74.6, -222, 89.6, -222, 92.9, -210, 103.9, -210, 105.2, -184, 118.2, -184, 119.5, -154.3, 128, -137.4, 128, -136, 131.4, -136, 136.5, -126, 153.4, -126, 156.8, -118, 165.7, -118, 168.7, -108.8, 166, -107.8, 166, -102, 171.8, -102, 173.7, -61.2, 180, 66.6, 180, 75.1, 178, 88.7, 178, 96.7, 172, 102.9, 172, 107.9, 166, 110, 166, 110, 145.6, 104, 132.6, 104, 131.6, 110, 124, 111.5, 124, 117.6, 101.4, 130, 117.6, 130, 120.9, 146, 135.9, 146, 137.3, 165.6, 146, 180.4, 146, 201.4, 138, 203.8, 138, 214.8, 127, 217, 127, 232, 108, 233.3, 108, 242, 87.7, 242, 46.1, 237, 29.7, 237, 27.3, 228, 15.3, 228, 13.2, 194, -21.8, 194, -23.2, 170.5, -36, 168.5, -36, 174, -45.5, 174, -74.6, 166, -87.6, 166, -90.9, 144, -111.9, 144, -113.2, 126, -122.3, 126, -123.7, 110, -126.7, 110, -128, 67.5, -128, 60.5, -124, 60, -146.7, 56, -151.7, 56, -154.9, 40, -170, 40, -171.4, 32, -174.5, 32, -175.6)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="BowlArea/ChipSprite"]
position = Vector2(328, 255)
scale = Vector2(0.16, 0.16)
polygon = PackedVector2Array(198.7, -153.4, 196, -152.4, 196, -150.8, 175.2, -129, 173.8, -129, 165.9, -115, 164.7, -115, 136, -55.5, 136, -53.1, 127.7, -47.7, 118.4, -51, 111.4, -51, 94.8, -40.9, 81, -85.3, 81, -88.4, 67.9, -117.6, 69, -119, 72.2, -119, 68.2, -127, 65.7, -127, 39.7, -119, 36.5, -119, 8.5, -104, 6.40002, -104, -63.2, -53.6, -102.6, -68, -108.7, -68, -117.7, -61, -120, -61, -131.5, -46.4, -155.8, -52, -164, -52, -174, -39, -175.4, -39, -179, -28.6, -181.1, -28, -184.6, -28, -198.2, -19, -212, -63.3, -212, -66.4, -225.1, -95.6, -224, -97, -222.8, -97, -221.7, -99.1, -224, -102.7, -224, -105.7, -253.3, -97, -256.5, -97, -284.5, -82, -286.6, -82, -356.2, -31.6, -395.6, -46, -401.7, -46, -410.7, -39, -413, -39, -424.5, -24.4, -448.8, -30, -457, -30, -467, -17, -468.6, -17, -470.6, -8, -471.9, -8, -473, 20, -473, 21.2, -469, 40.4, -530.1, 57, -534.4, 57, -583.3, 78, -585.7, 78, -612.7, 99, -614.3, 99, -619.3, 110, -620.9, 110, -621.9, 124, -623.1, 124, -593.75, 162.5, -543.75, 181.25, -393.75, 231.25, 318.75, 243.75, 456.25, 187.5, 546.8, 164, 548, 164, 548, 118.5, 540, 103.4, 540, 100.9, 504, 76.9, 504, 75.6, 441.4, 52, 440.3, 52, 445, 15.1, 445, 8.20001, 435, -1.79999, 435, -3.29999, 418.4, -11, 418, -37, 417, -37, 417, -42, 412, -46, 412, -47.5, 397, -51.5, 397, -53.2, 384.8, -52, 376.6, -52, 325.6, -32, 324.8, -32, 264, -93.8, 264, -94.9, 202.4, -145.5, 203.3, -147.2)

[node name="Left" type="Area2D" parent="BowlArea/ChipSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BowlArea/ChipSprite/Left"]
position = Vector2(264, 260)
shape = SubResource("RectangleShape2D_lonth")

[node name="Middle" type="Area2D" parent="BowlArea/ChipSprite"]
position = Vector2(65, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BowlArea/ChipSprite/Middle"]
position = Vector2(258, 256)
shape = SubResource("RectangleShape2D_lonth")

[node name="Right" type="Area2D" parent="BowlArea/ChipSprite"]
position = Vector2(123, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BowlArea/ChipSprite/Right"]
position = Vector2(259, 253)
shape = SubResource("RectangleShape2D_lonth")

[node name="PicoBowl" type="TextureButton" parent="." node_paths=PackedStringArray("spawnTimer")]
visible = false
offset_left = 389.0
offset_top = 230.0
offset_right = 1669.0
offset_bottom = 1510.0
rotation = 3.14159
scale = Vector2(0.11, 0.11)
texture_normal = ExtResource("9_ty3uo")
texture_pressed = ExtResource("9_ty3uo")
texture_hover = ExtResource("9_ty3uo")
texture_disabled = ExtResource("9_ty3uo")
texture_focused = ExtResource("9_ty3uo")
script = ExtResource("13_yyxdo")
spawnTimer = NodePath("Timer")

[node name="Timer" type="Timer" parent="PicoBowl"]
wait_time = 0.1

[node name="Label" type="Label" parent="PicoBowl"]
layout_mode = 0
offset_left = 1400.0
offset_top = 1636.37
offset_right = 1596.0
offset_bottom = 1678.37
rotation = 3.14159
scale = Vector2(8.382, 10.78)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "click n shake!"
label_settings = SubResource("LabelSettings_yyxdo")

[node name="ChipBag" type="TextureButton" parent="." node_paths=PackedStringArray("chipTimer")]
offset_left = 399.0
offset_top = 158.0
offset_right = 1003.0
offset_bottom = 794.0
rotation = 3.10843
scale = Vector2(0.095, 0.095)
texture_normal = ExtResource("9_iwwu1")
texture_pressed = ExtResource("9_iwwu1")
texture_hover = ExtResource("9_iwwu1")
texture_disabled = ExtResource("9_iwwu1")
texture_focused = ExtResource("9_iwwu1")
stretch_mode = 0
script = ExtResource("3_k6ick")
chipTimer = NodePath("Timer")

[node name="Timer" type="Timer" parent="ChipBag"]
wait_time = 0.1

[node name="Label" type="Label" parent="ChipBag"]
layout_mode = 0
offset_left = 1081.02
offset_top = 1383.97
offset_right = 1281.02
offset_bottom = 1418.97
rotation = 3.14159
scale = Vector2(4.076, 6.05)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "click n shake!"
label_settings = SubResource("LabelSettings_yyxdo")

[node name="CheeseBottle" type="TextureButton" parent="." node_paths=PackedStringArray("cheeseTimer")]
visible = false
offset_left = 404.0
offset_top = 212.0
offset_right = 1684.0
offset_bottom = 1492.0
rotation = 3.14159
scale = Vector2(0.11, 0.11)
texture_normal = ExtResource("11_p6had")
texture_pressed = ExtResource("11_p6had")
texture_hover = ExtResource("11_p6had")
texture_disabled = ExtResource("11_p6had")
texture_focused = ExtResource("11_p6had")
script = ExtResource("7_y75r0")
cheeseTimer = NodePath("Timer")

[node name="Timer" type="Timer" parent="CheeseBottle"]
wait_time = 0.1

[node name="Label" type="Label" parent="CheeseBottle"]
layout_mode = 0
offset_left = 990.906
offset_top = 1500.0
offset_right = 1183.91
offset_bottom = 1542.0
rotation = 3.14159
scale = Vector2(4.322, 5.558)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "click n drag!"
label_settings = SubResource("LabelSettings_yyxdo")

[node name="Meatbowl" type="Sprite2D" parent="."]
visible = false
position = Vector2(537, 237)
scale = Vector2(0.133137, 0.109363)
texture = ExtResource("13_p6had")

[node name="Meatbowl" type="Area2D" parent="Meatbowl"]
position = Vector2(-22.533, 292.604)
scale = Vector2(3.57143, 4.34783)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Meatbowl/Meatbowl"]
polygon = PackedVector2Array(-41, -69.5, -41, -68.4, -80.1, -65.5, -89.2, -65.5, -119.4, -59.5, -124.4, -59.5, -153.4, -48.5, -155.9, -48.5, -163.9, -39.5, -166.2, -39.5, -164, -13.3, -164, -9, -156, 7, -156, 9.3, -149, 17.2, -149, 19.4, -135, 32.4, -135, 33.6, -118, 44.6, -118, 45.8, -95, 55.7, -95, 57, -70, 63.9, -70, 65.2, -21.1, 72.5, 13.2, 72.5, 46.3, 67.5, 51.3, 67.5, 82.3, 57.5, 85.5, 57.5, 118.5, 38.5, 120.8, 38.5, 137.8, 21.5, 139.2, 21.5, 151.1, 0.5, 152.6, 0.5, 156.6, -16.5, 158.1, -16.5, 157, -37.6, 157, -40.6, 141, -50.7, 141, -52, 126, -56, 126, -57.2, 83, -64.3, 83, -65.4, 51, -67.4, 51, -68.5)

[node name="Label" type="Label" parent="Meatbowl"]
offset_left = -751.105
offset_top = -877.813
offset_right = -433.105
offset_bottom = -790.813
scale = Vector2(4.505, 4.314)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "click to drag
release to drop meat"
label_settings = SubResource("LabelSettings_yyxdo")
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Meatbowl"]
offset_left = -623.416
offset_top = -292.604
offset_right = -321.416
offset_bottom = -205.604
scale = Vector2(4.505, 4.314)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "drag spoon here!"
label_settings = SubResource("LabelSettings_yyxdo")
metadata/_edit_use_anchors_ = true

[node name="Meatbowlold" type="Sprite2D" parent="."]
visible = false
position = Vector2(534, 269)
scale = Vector2(0.47549, 0.47549)
texture = ExtResource("8_fo6km")

[node name="Spoon" type="TextureButton" parent="."]
visible = false
offset_left = 449.0
offset_top = 71.0
offset_right = 615.0
offset_bottom = 125.0
texture_normal = ExtResource("9_8dant")
texture_pressed = ExtResource("9_8dant")
texture_hover = ExtResource("9_8dant")
texture_disabled = ExtResource("9_8dant")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("10_wwtah")

[node name="spoonArea" type="Area2D" parent="Spoon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spoon/spoonArea"]
position = Vector2(29, 39)
rotation = 1.39277
shape = SubResource("CapsuleShape2D_fo6km")

[node name="Spoonmeat" type="Sprite2D" parent="Spoon"]
visible = false
position = Vector2(29, 41)
scale = Vector2(0.338608, 0.319149)
texture = ExtResource("11_8dant")

[node name="Timer" parent="." instance=ExtResource("14_yyxdo")]
offset_left = -53.0
offset_top = -9.0
offset_right = -53.0
offset_bottom = -9.0
time = 20.0

[connection signal="body_entered" from="BowlArea" to="." method="_on_bowl_area_body_entered"]
[connection signal="body_entered" from="BowlArea/ChipSprite" to="." method="_on_chip_sprite_body_entered"]
[connection signal="body_entered" from="BowlArea/ChipSprite/Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="BowlArea/ChipSprite/Middle" to="." method="_on_middle_body_entered"]
[connection signal="body_entered" from="BowlArea/ChipSprite/Right" to="." method="_on_right_body_entered"]
[connection signal="button_down" from="PicoBowl" to="PicoBowl" method="_on_button_down"]
[connection signal="button_up" from="PicoBowl" to="PicoBowl" method="_on_button_up"]
[connection signal="timeout" from="PicoBowl/Timer" to="PicoBowl" method="_on_timer_timeout"]
[connection signal="timeout" from="PicoBowl/Timer" to="ChipBag" method="_on_timer_timeout"]
[connection signal="button_down" from="ChipBag" to="ChipBag" method="_on_button_down"]
[connection signal="button_up" from="ChipBag" to="ChipBag" method="_on_button_up"]
[connection signal="timeout" from="ChipBag/Timer" to="ChipBag" method="_on_timer_timeout"]
[connection signal="button_down" from="CheeseBottle" to="CheeseBottle" method="_on_button_down"]
[connection signal="button_up" from="CheeseBottle" to="CheeseBottle" method="_on_button_up"]
[connection signal="timeout" from="CheeseBottle/Timer" to="ChipBag" method="_on_timer_timeout"]
[connection signal="timeout" from="CheeseBottle/Timer" to="CheeseBottle" method="_on_timer_timeout"]
[connection signal="area_entered" from="Meatbowl/Meatbowl" to="Spoon" method="_on_meatbowl_area_entered"]
[connection signal="button_down" from="Spoon" to="Spoon" method="_on_button_down"]
[connection signal="button_up" from="Spoon" to="Spoon" method="_on_button_up"]
[connection signal="time_done" from="Timer" to="." method="_on_timer_time_done"]
